--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,7 +3,7 @@
     <tr *ngFor="let row of matrice">
       <td *ngFor="let col of row" (click)="changeColor(col)" >
         <ng-container *ngIf="col.color != 'rgb(255,255,255)'"> 
-          <div [ngStyle]="{'background-color': col.color}"></div></ng-container>
+          <div [ngStyle]="{'background-color': col.selectedColor}"></div></ng-container>
       </td>
     </tr>
 </table>
